Fixed css alignment issues and added some button functionality

--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ body {
 .icons {
    margin-left: 8.5px;
    margin-top: 8.5px;
+   -ms-flex-align: baseline;
 }
 
 .todo {
@@ -106,10 +107,13 @@ body {
     width: 500px;
     padding-left: 20px;
     margin: 0;
+    margin-top: 8px;
 }
 
 .todo-item {
-    text-align: center;
+    /* text-align: center; */
+    /* margin-bottom: 10px;; */
+    margin-bottom: 15.8px;
     align-items: center;
     list-style: none;
     color: #002F2F;
@@ -117,4 +121,9 @@ body {
 
 .crossed-out {
     text-decoration: line-through;
+}
+
+.text-item {
+    text-align: center;
+    margin-left: 60px;
 }
